# AI_agent

./: Dockerfile  README.md  pyproject.toml
src/: website_factory.py
src/agent/: main.py  web_navigation.py
src/agent/websites/: alsea_website.py  base_website.py  dath_website.py  monparis_website.py
src/config/: settings.json
src/utils/: vision_tools.py
videos/: DATH+Monparis.webm  DATH_COMPLETE_V2.webm  Monparis_p2.webm
